--- a/src/gui/src/UI/PreferencesDialog_UI.ui
+++ b/src/gui/src/UI/PreferencesDialog_UI.ui
@@ -896,10 +896,10 @@
       <widget class="QFrame" name="frame">
        <property name="geometry">
         <rect>
-         <x>400</x>
+         <x>410</x>
          <y>0</y>
          <width>121</width>
-         <height>111</height>
+         <height>141</height>
         </rect>
        </property>
        <property name="frameShape">
@@ -911,20 +911,20 @@
        <widget class="QLabel" name="label_5">
         <property name="geometry">
          <rect>
-          <x>10</x>
+          <x>0</x>
           <y>10</y>
           <width>111</width>
           <height>20</height>
          </rect>
         </property>
         <property name="text">
-         <string>Pad 1-8 Sensing</string>
+         <string>Pad 1-8 Retrigger</string>
         </property>
        </widget>
-       <widget class="QSpinBox" name="PadSensingSpinBox">
+       <widget class="QSpinBox" name="PadRetriggerSpinBox">
         <property name="geometry">
          <rect>
-          <x>30</x>
+          <x>20</x>
           <y>50</y>
           <width>51</width>
           <height>21</height>
@@ -934,7 +934,23 @@
          <number>1</number>
         </property>
         <property name="maximum">
-         <number>1024</number>
+         <number>1000</number>
+        </property>
+        <property name="value">
+         <number>70</number>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_9">
+        <property name="geometry">
+         <rect>
+          <x>90</x>
+          <y>50</y>
+          <width>21</width>
+          <height>18</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>ms</string>
         </property>
        </widget>
       </widget>
@@ -943,8 +959,8 @@
         <rect>
          <x>110</x>
          <y>0</y>
-         <width>291</width>
-         <height>231</height>
+         <width>301</width>
+         <height>271</height>
         </rect>
        </property>
        <property name="frameShape">
@@ -957,9 +973,9 @@
         <property name="geometry">
          <rect>
           <x>220</x>
-          <y>120</y>
-          <width>62</width>
-          <height>101</height>
+          <y>140</y>
+          <width>61</width>
+          <height>121</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_33">
@@ -992,6 +1008,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QSpinBox" name="sensingSpinBox_8">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>1024</number>
+           </property>
+           <property name="value">
+            <number>250</number>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="notespinBoxPad_8">
            <property name="minimum">
             <number>21</number>
@@ -1011,8 +1040,8 @@
          <rect>
           <x>10</x>
           <y>10</y>
-          <width>62</width>
-          <height>101</height>
+          <width>61</width>
+          <height>121</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_7">
@@ -1051,6 +1080,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QSpinBox" name="sensingSpinBox_1">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>1024</number>
+           </property>
+           <property name="value">
+            <number>250</number>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="notespinBoxPad_1">
            <property name="minimum">
             <number>21</number>
@@ -1070,8 +1112,8 @@
          <rect>
           <x>220</x>
           <y>10</y>
-          <width>62</width>
-          <height>101</height>
+          <width>61</width>
+          <height>121</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_29">
@@ -1104,6 +1146,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QSpinBox" name="sensingSpinBox_4">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>1024</number>
+           </property>
+           <property name="value">
+            <number>250</number>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="notespinBoxPad_4">
            <property name="minimum">
             <number>21</number>
@@ -1123,8 +1178,8 @@
          <rect>
           <x>80</x>
           <y>10</y>
-          <width>62</width>
-          <height>101</height>
+          <width>61</width>
+          <height>121</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_27">
@@ -1163,6 +1218,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QSpinBox" name="sensingSpinBox_2">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>1024</number>
+           </property>
+           <property name="value">
+            <number>250</number>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="notespinBoxPad_2">
            <property name="minimum">
             <number>21</number>
@@ -1182,8 +1250,8 @@
          <rect>
           <x>150</x>
           <y>10</y>
-          <width>62</width>
-          <height>101</height>
+          <width>61</width>
+          <height>121</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_28">
@@ -1216,6 +1284,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QSpinBox" name="sensingSpinBox_3">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>1024</number>
+           </property>
+           <property name="value">
+            <number>250</number>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="notespinBoxPad_3">
            <property name="minimum">
             <number>21</number>
@@ -1234,9 +1315,9 @@
         <property name="geometry">
          <rect>
           <x>150</x>
-          <y>120</y>
-          <width>62</width>
-          <height>101</height>
+          <y>140</y>
+          <width>61</width>
+          <height>121</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_32">
@@ -1269,6 +1350,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QSpinBox" name="sensingSpinBox_7">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>1024</number>
+           </property>
+           <property name="value">
+            <number>250</number>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="notespinBoxPad_7">
            <property name="minimum">
             <number>21</number>
@@ -1287,9 +1381,9 @@
         <property name="geometry">
          <rect>
           <x>80</x>
-          <y>120</y>
-          <width>62</width>
-          <height>101</height>
+          <y>140</y>
+          <width>61</width>
+          <height>121</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_31">
@@ -1322,6 +1416,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QSpinBox" name="sensingSpinBox_6">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>1024</number>
+           </property>
+           <property name="value">
+            <number>250</number>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="notespinBoxPad_6">
            <property name="minimum">
             <number>21</number>
@@ -1340,9 +1447,9 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>120</y>
-          <width>62</width>
-          <height>101</height>
+          <y>140</y>
+          <width>61</width>
+          <height>121</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_30">
@@ -1375,6 +1482,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QSpinBox" name="sensingSpinBox_5">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>1024</number>
+           </property>
+           <property name="value">
+            <number>250</number>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="notespinBoxPad_5">
            <property name="minimum">
             <number>21</number>
@@ -1396,7 +1516,7 @@
          <x>10</x>
          <y>0</y>
          <width>101</width>
-         <height>231</height>
+         <height>271</height>
         </rect>
        </property>
        <property name="frameShape">
@@ -1409,7 +1529,7 @@
         <property name="geometry">
          <rect>
           <x>30</x>
-          <y>50</y>
+          <y>40</y>
           <width>61</width>
           <height>20</height>
          </rect>
@@ -1425,7 +1545,7 @@
         <property name="geometry">
          <rect>
           <x>50</x>
-          <y>80</y>
+          <y>100</y>
           <width>41</width>
           <height>20</height>
          </rect>
@@ -1465,7 +1585,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>120</y>
+          <y>190</y>
           <width>81</width>
           <height>34</height>
          </rect>
@@ -1478,7 +1598,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>170</y>
+          <y>230</y>
           <width>81</width>
           <height>34</height>
          </rect>
@@ -1487,14 +1607,30 @@
          <string>Write Config</string>
         </property>
        </widget>
+       <widget class="QLabel" name="label_87">
+        <property name="geometry">
+         <rect>
+          <x>30</x>
+          <y>70</y>
+          <width>61</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Sensing</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+       </widget>
       </widget>
       <widget class="QFrame" name="frame_4">
        <property name="geometry">
         <rect>
-         <x>400</x>
-         <y>120</y>
-         <width>120</width>
-         <height>111</height>
+         <x>410</x>
+         <y>140</y>
+         <width>121</width>
+         <height>131</height>
         </rect>
        </property>
        <property name="frameShape">
